--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@
     text-align: center;
     line-height: 10px;
     color: #333;
-    background: url('../img/lines.png') repeat-x;
+    background: url('../lines.png') repeat-x;
 }
 #sidebar h4 span{
     background: white;
