--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
     letter-spacing: 4px;
     color: white;
     text-align: center;
-    width: 420px;
+    width: 50%;
     height: 85px;
     margin-bottom: 20px;
     line-height: 82px;
